--- a/index.html
+++ b/index.html
@@ -321,7 +321,8 @@
           <!-- <p style="font-size:105%"> My featured works and projects </p> --> 
         </div>
 
-        <div class="row">
+        <!-- 09/22/21 - took out filter for now -->
+<!--         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
@@ -330,16 +331,15 @@
               <li data-filter=".filter-design">Design</li>
             </ul>
           </div>
-        </div>
+        </div>  -->
 
         <div class="row portfolio-container">
-
           <!-- Finance -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-finance">
             <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4> Calculator </h4>
-              <p> Finance </p>
+              <h4> COVID-Code </h4>
+              <!-- <p> comment </p> -->
               <!-- <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a> -->
               <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bx bx-plus"></i></a>
             </div>
@@ -365,16 +365,18 @@
             </div>
           </div> -->
 
+          <!-- 09/22/21 - IRENE, UNCOMMENT THE BLOCK BELOW FOR 2ND CASE STUDY -->
           <!-- Games -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-games">
+<!--           <div class="col-lg-4 col-md-6 portfolio-item filter-games">
             <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4> Pomodoro Player </h4>
               <p> Game </p>
+              <!-- extra plus icon to get enlarged image of cover -->
               <!-- <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a> -->
-              <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bx bx-plus"></i></a>
+              <!-- <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bx bx-plus"></i></a>
             </div>
-          </div>
+          </div> -->
 <!-- 
           <div class="col-lg-4 col-md-6 portfolio-item filter-photography">
             <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
@@ -396,16 +398,17 @@
             </div>
           </div> -->
           
+          <!-- 09/22/21 - IRENE, UNCOMMENT THE BLOCK BELOW FOR 3RD CASE STUDY -->
           <!-- Design -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-design">
+<!--           <div class="col-lg-4 col-md-6 portfolio-item filter-design">
             <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4> COVID-Code </h4>
               <p> Design </p>
               <!-- <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 1"><i class="bx bx-plus"></i></a> --> 
-              <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bx bx-plus"></i></a> <!-- bx bx-link -->
-            </div>
-          </div>
+              <!-- <a href="portfolio-details.html" target="_blank" class="details-link" title="More Details"><i class="bx bx-plus"></i></a> <!-- bx bx-link -->
+            <!-- </div>
+          </div> -->
 
 <!--           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
