--- a/index.html
+++ b/index.html
@@ -90,8 +90,11 @@
     </div>
   </header><!-- End Header -->
 
+  
+
   <!-- ======= Hero Section ======= -->
   <section id="hero">
+
     <div class="hero-container">
       <!-- <h3>Welcome to <strong>Tempo</strong></h3> -->
       <h1> Hi, I'm Irene! </h1>
@@ -102,6 +105,8 @@
       <!-- <a href="#about" class="btn-get-started scrollto">Get Started</a> -->
     </div>
   </section><!-- End Hero -->
+
+  
 
   <main id="main">
 
@@ -117,7 +122,6 @@
         </div>
 
         <div class="row content">
-
           <div class="col-lg-6">
             <!-- added profile picture -->
             <div class="container-fluid">
@@ -131,10 +135,8 @@
                   <div class="member-img text-center">
                     <img id="prof-pic" src="assets/img/team/team-00.jpg" class="img-fluid" alt=""> 
                   </div>
-
                 </div>
               </div>
-
             </div>
           </div>
          </div> 
@@ -142,14 +144,6 @@
          <div class="col-lg-6 pt-4 pt-lg-0 mx-auto">
             <p style="font-size:120%">
               Hi, I’m Irene! I’m a recent Computer Science graduate from UC San Diego. I’m an aspiring product designer and web developer looking forward to expanding my career in UX design. <br>
-              
-            </p>
-            <p style="font-size:125%">
-<!--               <div class="social">
-                <a href="https://www.linkedin.com/in/irenelue/" target="_blank"><i class="bi bi-linkedin"></i></a>
-                <a href="https://github.com/irenelue" target="_blank"><i class="bi bi-github"></i></a>
-                <a href="https://www.instagram.com/irenelue/" target="_blank"><i class="bi bi-instagram"></i></a>
-              </div> -->
             </p>
           </div> 
 
@@ -693,7 +687,7 @@
           <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d211594.8820765097!2d-118.41657902332075!3d34.03950924470322!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2sLos%20Angeles%2C%20CA!5e0!3m2!1sen!2sus!4v1624479571983!5m2!1sen!2sus" frameborder="0" allowfullscreen></iframe>
         </div> -->
         
-        <div class="section-title">
+        <div class="section-contact">
           <div class="email">
             <a href="https://www.linkedin.com/in/irenelue/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
             <a href="https://github.com/irenelue" target="_blank" class="github"><i class="bi bi-github"></i></a>
