--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -41,7 +41,6 @@
 </head>
 
 <body>
-
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-between">
@@ -52,12 +51,11 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto " href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto " href="#about">About</a></li>
-          <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-          <li><a href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" target="_blank">Resume</a></li>
-          <li><a class="nav-link scrollto " href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto active" href="index.html" target="_blank">Home</a></li>
+          <li><a class="nav-link scrollto" href="/#about" target="_blank">About</a></li>
+          <li><a class="nav-link scrollto " href="/#portfolio" target="_blank">Portfolio</a></li>
+          <li><a class="nav-link scrollto " href="/#contact">Contact</a></li>
+
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -80,7 +78,7 @@
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>  -->
         </ul> 
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </nav> <!-- .navbar -->
 
     </div>
   </header><!-- End Header -->
@@ -205,10 +203,9 @@
   </div> -->
 
   <div class="container d-md-flex py-4">
-
     <div class="me-md-auto text-center text-md-start">
       <div class="copyright">
-        &copy; Copyright <strong><span>Irene Lue</span></strong> 2021
+        &copy; <strong><span>Irene Lue</span></strong> 
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
@@ -218,18 +215,22 @@
         <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       </div>
     </div>
-    <div class="social-links text-center text-md-right pt-3 pt-md-0">
-<!--    <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+    <!-- given for social media links at bottom right corner -->
+    <!-- <div class="social-links text-center text-md-right pt-3 pt-md-0">
+      <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
       <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
       <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-      <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+      <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> 
       <a href="https://www.linkedin.com/in/irenelue/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      <a href="https://github.com/irenelue" class="github"><i class="bx bxl-github"></i></a>
+      <a href="https://github.com/irenelue" class="github"><i class="bx bxl-github"></i></a> -->
     </div>
   </div>
 </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+<!-- consistent buttons scrolling throughout pages -->
+<a href="https://www.linkedin.com/in/irenelue/" target="_blank" class="consistent-buttonL d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
+<a href="https://github.com/irenelue" target="_blank" class="consistent-button d-flex align-items-center justify-content-center"><i class="bi bi-github"></i></a>
+<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
