--- a/aboutme.html
+++ b/aboutme.html
@@ -109,31 +109,37 @@
                         <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch"> -->
                         <div class="member-img">             <!-- class="img-fluid rounded-circle" --> 
                           <img id="prof-pic" src="assets/img/team/team-00.jpg" class="img-fluid" alt=""> 
+                          <p>
+                            <br> <br>
+                          </p>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div> 
       
-                <div class="col-lg-6 pt-4 pt-md-1 mx-auto">
+                <div class="col-lg-5 mx-auto"> 
                   <div class="about-title">
                     <!-- <p style="font-size:200%"> -->
-                      Hi, I'm Irene!
+                      Hi, I'm Irene! 👋
                     <!-- <p> -->
                   </div>
                   <div class ="about-paragraph">
-                    I’m a recent Computer Science graduate from UC San Diego 
-                    fascinated by thoughtful design that
-                    helps people to live more fulfilling lives. I believe 
-                    in crafting practical solutions that solves problems and 
-                    empowers people to become the best version they can be. 
+                    I’m a recent Computer Science graduate from UC San Diego
+                    with a fascination for thoughtful and innovative design. I 
+                    believe in crafting meaningful solutions that can help and 
+                    empower people to live more fulfilling lives. 
                     <br> <br>
-                    Aside from design, I'm a big animal lover and I enjoy running
-                    and exploring the outdoors. 
-                    <br> <br> 
-                    <!-- I'm always excited to collaborate. If you’d like 
-                    to work together, let’s get in touch!
-                    <br> <br> -->
+                    I'm currently a UX designer in training and working on
+                    projects in product design and web development. Aside from
+                    design, I'm a big animal lover and I like to stay active by 
+                    running and exploring the outdoors. 
+                    <br> <br>
+                    I'm always excited to collaborate. If you’d like 
+                    to work together or have questions, let’s get in touch!
+                    <br> <br>
+                  </div>
+                  <div class = "about-link"> 
                     You can view my full resume
                     <a class="cta-btn" href="https://drive.google.com/file/d/153o6HQZxTyskVU8ruE8fxNL2DZmSKU9_/view?usp=sharing" 
                     style="color:blue" target="_blank"><u>here</u></a>!
@@ -146,39 +152,39 @@
   
 <!-- ======= Footer ======= -->
 <footer id="footer">
-
   <div class="footer-top">
     <div class="container">
       <div class="row">
+        <div class="container d-md-flex py-4">
+            <div class="credits">
+              <!-- All the links in the footer should remain intact. -->
+              <!-- You can delete the links only if you purchased the pro version. -->
+              <!-- Licensing information: https://bootstrapmade.com/license/ -->
+              <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/tempo-free-onepage-bootstrap-theme/ -->
+              <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
+            </div>
+        </div>
+        <div class="section-contact-port">
+          <div class="me-md-auto text-center">
+            <div class="email">
+              <a href="mailto: irenelue01@gmail.com" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a>
+              <a href="https://www.linkedin.com/in/irenelue/" class="class1" target="_blank" class="linkedin" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
+              <a href="https://github.com/irenelue" class="class1" target="_blank" class="github" title="GitHub"><i class="bi bi-github"></i></a>
+              <a href="https://dribbble.com/irenelue/collections" class="class1" target="_blank" title="Dribbble"><i class="fas fa-basketball-ball"></i></a>
+              <a href="https://www.instagram.com/irenelue/" class="class1" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a>
+              <!-- <a href="https://medium.com/@irenelue" class="class1" target="_blank" title="Medium"><i class="fab fa-medium-m" ></i></a> -->
+            </div>
+          </div>
+        </div>
 
-  <div class="container d-md-flex py-4">
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/tempo-free-onepage-bootstrap-theme/ -->
-        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
-      </div>
-  </div>
-
-  <div class="section-contact-port">
-    <div class="me-md-auto text-center">
-      <div class="email">
-        <a href="mailto: irenelue01@gmail.com" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a>
-        <a href="https://www.linkedin.com/in/irenelue/" class="class1" target="_blank" class="linkedin" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
-        <a href="https://github.com/irenelue" class="class1" target="_blank" class="github" title="GitHub"><i class="bi bi-github"></i></a>
-        <a href="https://dribbble.com/irenelue/collections" class="class1" target="_blank" title="Dribbble"><i class="fas fa-basketball-ball"></i></a>
-        <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a>
-        <!-- <a href="https://medium.com/@irenelue" class="class1" target="_blank" title="Medium"><i class="fab fa-medium-m" ></i></a> -->
+        <div class="me-md-auto text-center">
+          <div class="copyright">
+            <h1 style="color:black;font-size:12px;letter-spacing:0.5px;"<span> </span> &copy; <span> Irene Lue 2022 </span></h1>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-
-  <div class="me-md-auto text-center">
-    <div class="copyright">
-      <strong><span> </span></strong> &copy; <strong><span> Irene Lue 2022 </span></strong> 
-    </div>
-  </div>
   </div>
 </footer><!-- End Footer -->
 
